# ChangeLog for media-libs/liblrdf
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/liblrdf/ChangeLog,v 1.31 2008/02/12 12:37:57 flameeyes Exp $

  12 Feb 2008; Diego Pettenò <flameeyes@gentoo.org> liblrdf-0.4.0.ebuild:
  Run elibtoolize.

  11 Nov 2007; Fabian Groffen <grobian@gentoo.org> liblrdf-0.3.7.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  11 Nov 2007; Raúl Porcel <armin76@gentoo.org> liblrdf-0.4.0.ebuild:
  sparc stable wrt #198416

  11 Nov 2007; Markus Meier <maekke@gentoo.org> liblrdf-0.4.0.ebuild:
  x86 stable, bug #198416

  11 Nov 2007; nixnut <nixnut@gentoo.org> liblrdf-0.4.0.ebuild:
  Stable on ppc wrt bug 198416

  11 Nov 2007; Samuli Suominen <drac@gentoo.org> liblrdf-0.4.0.ebuild:
  amd64 stable wrt #198416 and use emake in src_install with D quoted.

  10 Nov 2007; Markus Rothe <corsair@gentoo.org> liblrdf-0.4.0.ebuild:
  Stable on ppc64; bug #198416

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  03 Feb 2007; Steve Dibb <beandog@gentoo.org> liblrdf-0.3.7.ebuild:
  Update src_uri

  09 May 2006; Stephanie Lockwood-Childs <wormo@gentoo.org>
  liblrdf-0.3.7.ebuild:
  stable on ppc (needed for Bug #132522)

  26 Apr 2005; Frank van de Pol <fvdpol@gentoo.org> liblrdf-0.3.7.ebuild:
  Corrected runtime dependencies. fixes bug #90517

*liblrdf-0.4.0 (15 Apr 2005)

  15 Apr 2005; Jan Brinkmann <luckyduck@gentoo.org> -liblrdf-0.3.1.ebuild,
  -liblrdf-0.3.4.ebuild, -liblrdf-0.3.5-r1.ebuild, liblrdf-0.3.7.ebuild,
  +liblrdf-0.4.0.ebuild:
  pkgconfig not in RDEPEND any longer, also did some cleanup. new upstream
  version released, fixes #89018

  05 Mar 2005; Markus Rothe <corsair@gentoo.org> liblrdf-0.3.7.ebuild:
  Stable on ppc64

  03 Jan 2005; Markus Rothe <corsair@gentoo.org> liblrdf-0.3.7.ebuild:
  Added ~ppc64 to KEYWORDS

  01 Oct 2004; kito@gentoo.org liblrdf-0.3.7.ebuild:
  added ~ppc-macos
